# rssaapi

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  deploy.sh  pyproject.toml  pytest.ini  requirements.txt  rssa-architecture.excalidraw  rssa.excalidraw  runner.sh
assets/models/: README.md
deploy/templates/: rssa-api.service.template
scripts/: train_mf.py  train_mfs.py
src/: app.py  config.py  customizedALS.py  logging_config.py  main.py
src/algs/: customizedALS.py  rssa_recommendation.py
src/algs/train/: train_models.py
src/apps/admin/: api.py  main.py
src/apps/demo/: main.py
src/apps/rssa/: api.py  main.py
src/apps/study/: main.py
src/auth/: auth0_management.py  authorization.py  config.py  security.py
src/compute/: common.py  iers.py  rspc.py  rspv.py  rssa.py  rssa_common.py  utils.py
src/core/: config.py
src/data/: base.py  cybereddatabase.py  database.py  logger.py  moviedb.py  movies.py  rssadb.py  studies.py  studies_v2.py  studydatabase.py  userdatabase.py  users.py  utility.py
src/data/__marked_for_delete/: cybereddatabase_old.py  moviedatabase.py  moviedatabase_old.py  movies_old.py  studies_old.py  studydatabase.py  userdatabase.py  userdatabase_old.py  users.py
src/data/accessors/: movies.py  participants.py  studies.py  study_responses.py  survey_constructs.py
src/data/models/: movie.py  movies.py  movies_v2.py  participant.py  participant_behavior.py  participant_movie_sequence.py  participant_responses.py  participants.py  schema.py  study.py  study_components.py  study_participants.py  study_v2.py  studyschema.py  survey_constructs.py  user.py  userschema.py
src/data/repositories/: __init__.py  api_key_repo.py  base_ordered_repo.py  base_participant_response_repo.py  base_repo.py  construct_item.py  construct_item_type.py  construct_type.py  content_dependencies.py  demographics.py  dependencies.py  feedback.py  movies.py  page.py  page_content.py  participant.py  participant_movie_session.py  participant_response.py  participant_session.py  participant_type.py  pre_shuffled_movie_list.py  rssa_dependencies.py  study.py  study_admin.py  study_condition.py  study_responses.py  study_step.py  survey_construct.py  survey_constructs.py  survey_dependencies.py  user_repo.py
src/data/schemas/: __init__.py  analytics_schemas.py  base_schemas.py  feedback_schemas.py  movie_schemas.py  participant_response_schemas.py  participant_schemas.py  preferences_schemas.py  step_page_schemas.py  study_components.py  study_condition_schemas.py  study_schemas.py  study_step_schemas.py  survey_construct_schemas.py  survey_constructs.py  survey_response_schemas.py  survey_schemas.py
src/data/services/: __init__.py  admin_service.py  api_key_service.py  construct_item_service.py  construct_items.py  construct_scales.py  content_dependencies.py  dependencies.py  feedback_service.py  movie_service.py  page_content_service.py  participant_movie_sessions.py  participant_service.py  participant_session.py  users.py  (+13 more)
src/docs/: admin_docs.py  metadata.py  rssa_docs.py
src/exceptions/: handlers.py
src/middleware/: access_logger.py  error_handlers.py  infostats.py
src/middlewares/: access_logger.py  bad_request_logging.py  cache_moinitoring.py  infostats.py  logging.py
src/router/: admin.py  auth0.py  cybered.py  dataviewer.py  iers.py  movies.py  participant.py  pref_comm.py  pref_viz.py  study.py  study_meta.py  users.py
src/rssa_api/: config.py  main.py
src/util/: docs_metadata.py
tests/: admin_routers_test.py  conftest.py  content_name_test.py  repository_crud_test.py  reproduction_test.py  scoping_repro_test.py  studies_router_test.py  study_step_repo_test.py  test_admin_routers.py  test_content_name.py  test_recommendations_endpoint.py  test_repository_crud.py  test_reproduction.py  test_scoping_repro.py  test_studies_router.py  test_study_conditions_router.py  test_study_step_repo.py
tests/services/: test_enrollment_service.py  test_recommender_service.py
(+403 files in other folders)
