[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["__init__.py"]
fix = true

[tool.ruff.lint]
ignore = [
	"W191",  # indentation contains tabs
	"B008", # function call in default argument
]
select = [
	"E",  # Pyflakes errors
	"W",  # Pyflakes warnings
	"F",  # Pyflakes errors
	"I",  # isort
	"C",  # flake8-comprehensions
	"B",  # flake8-bugbear
	"UP", # pyupgrade,
	"D",  # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.pylint.main]
load-plugins = ["pylint_sqlalchemy"]

[project]
name = "rssa-api"
version = "0.6"
description = ""
authors = [
    {name = "Shahan M Iqbal",email = "mehtabi@clemson.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.3",
    "fastapi>=0.128.0",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.45",
    "structlog>=25.5.0",
    "types-aiobotocore-lambda>=3.1.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["rssa_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
